--- a/client-cli/package.json
+++ b/client-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "todo-not-so-fancy-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "firebase": "^5.3.1",
+    "sweetalert2": "^7.26.11",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.19",
+    "vuetify": "^1.1.12",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
